<resources>

    <string name="app_name">简单聊天器</string>

    <string name="local_ip">本机IP：</string>

    <string name="client">客户端</string>

    <string name="server">服务端</string>

    <string name="send">发送</string>

    <string name="connect">连接</string>

    <string name="server_ip">对方IP和端口号：</string>

    <string name="set_port">设定端口号：</string>

    <string name="create">创建</string>
    <string name="destroy">销毁</string>
    <string name="create_success_will_create_qrcode">创建服务成功将会生成二维码：</string>
    <string name="disconnect">断开</string>
    <string name="scan">扫描</string>

</resources>
