<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_local_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/local_ip" />

    <View
        android:id="@+id/v_head_divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#80000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_left"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/client" />

        <Button
            android:id="@+id/btn_right"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/server" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>

</LinearLayout>