<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:background="@drawable/bg_green"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:singleLine="true"
            android:text="@string/set_port"
            android:textSize="@dimen/text_size_1" />

        <EditText
            android:id="@+id/et_server_port_input"
            android:layout_width="0px"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/bg_green"
            android:cursorVisible="true"
            android:inputType="textCapSentences"
            android:padding="3px"
            android:singleLine="true"
            android:textSize="@dimen/text_size_1" />

        <Button
            android:id="@+id/btn_server_create"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:background="@drawable/bg_green"
            android:text="@string/create"
            android:textSize="@dimen/text_size_1" />

        <Button
            android:id="@+id/btn_server_destroy"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:background="@drawable/bg_green"
            android:text="@string/destroy"
            android:textSize="@dimen/text_size_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="3dp"
        android:background="@drawable/bg_green"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_qrcode_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:singleLine="true"
            android:text="@string/create_success_will_create_qrcode"
            android:textSize="@dimen/text_size_1" />

        <ImageView
            android:id="@+id/iv_qrcode"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="3dp"
            android:src="@mipmap/default_qrcode" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_server_chat_result"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/bg_yellow">

        <TextView
            android:id="@+id/tv_server_chat_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="true"
            android:focusable="true"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_size_1" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_server_chat_input"
            android:layout_width="0px"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/bg_green"
            android:cursorVisible="true"
            android:inputType="textCapSentences"
            android:padding="3px"
            android:singleLine="true"
            android:textSize="@dimen/text_size_1" />

        <Button
            android:id="@+id/btn_server_send"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:background="@drawable/bg_green"
            android:text="@string/send"
            android:textSize="@dimen/text_size_1" />
    </LinearLayout>

</LinearLayout>