<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:background="@drawable/bg_green"
            android:gravity="center"
            android:lines="2"
            android:paddingLeft="3dp"
            android:text="@string/server_ip"
            android:textSize="@dimen/text_size_1" />

        <EditText
            android:id="@+id/et_client_target_ip_input"
            android:layout_width="0px"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:layout_weight="0.7"
            android:background="@drawable/bg_green"
            android:cursorVisible="true"
            android:inputType="text"
            android:padding="3px"
            android:singleLine="true"
            android:textSize="@dimen/text_size_1" />

        <EditText
            android:id="@+id/et_client_target_port_input"
            android:layout_width="0px"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:layout_weight="0.3"
            android:background="@drawable/bg_green"
            android:cursorVisible="true"
            android:inputType="text"
            android:padding="3px"
            android:singleLine="true"
            android:textSize="@dimen/text_size_1" />

        <Button
            android:id="@+id/btn_client_connect"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:background="@drawable/bg_green"
            android:text="@string/connect"
            android:textSize="@dimen/text_size_1" />

        <Button
            android:id="@+id/btn_client_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:background="@drawable/bg_green"
            android:text="@string/disconnect"
            android:textSize="@dimen/text_size_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="3dp"
        android:background="@drawable/bg_green"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_qrcode_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:singleLine="true"
            android:text="也可以扫描服务端二维码来绑定："
            android:textSize="@dimen/text_size_1" />

        <Button
            android:id="@+id/btn_scan_qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/bg_green"
            android:text="@string/scan"
            android:textSize="@dimen/text_size_1" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_client_chat_result"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/bg_yellow">

        <TextView
            android:id="@+id/tv_client_chat_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="true"
            android:focusable="true"
            android:longClickable="true"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_size_1" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_client_chat_input"
            android:layout_width="0px"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/bg_green"
            android:cursorVisible="true"
            android:inputType="text"
            android:padding="3px"
            android:singleLine="true"
            android:textSize="@dimen/text_size_1" />

        <Button
            android:id="@+id/btn_client_send"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_margin="3dp"
            android:background="@drawable/bg_green"
            android:text="@string/send"
            android:textSize="@dimen/text_size_1" />
    </LinearLayout>

</LinearLayout>